--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,102 +1,43 @@
 main {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .title {
-    background-color: aqua;
-    width: 500px;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .outer-container {
-    width: 60%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  
-  .matches-container {
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .match {
-    display: flex;
-    border: 1px solid red;
-    width: 100%;
-  }
-  
-  .info {
-    flex: 3;
-    padding: 20px;
-  }
-  
-  .actions {
-    flex-direction: 1;
-    display: flex;
-    align-items: center;
-    padding: 20px;
-  }
-  
-  .alert {
-    font-weight: 700;
-    color: red;
-  }
-  
-  .comments-container {
-    border-top: 2px dotted red;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .comment {
-    display: flex;
-    flex-direction: column;
-    background-color: bisque;
-  }
-  
-  .header {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  
-  }
-  
-  .body {
-    width: 100%;
-  }
-  
-  .login-actions {
-    display: flex;
-    width: 100%;
-    align-items: center;
-  }
-  
-  .login-actions a {
-    margin-left: 30px;
-  }
-  
-  .comments-container {
-    margin-top: 10px;
-  }
-  
-  
-  .leftAndRight {
-    display: flex;
-  }
-  
-  .score-table {
-    display: flex;
-    flex-direction: column;
-    margin-left: 50px;
-  }
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+
+
+div.safe, div.vulnerable {
+  position: fixed;
+  top: 100px;
+  bottom: 30px;
+  right: 50px;
+  left: 50px;
+  border: 3px solid #73AD21;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  overflow: auto;
+}
+
+.flex-row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items:center;
+  justify-content: flex-end;
+}
+
+.register-form {
+  display: flex; flex-direction: column;
+}
+
+.register-form input, .register-form button {
+  width: 500px;
+}
